Fixed build issues.
Signed-off-by: Tomas Kraus <Tomas.Kraus@oracle.com>